--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
 confection==0.0.4
-contourpy==1.0.6
+contourpy==1.0.7
 cryptography==39.0.2
 cycler==0.11.0
 cymem==2.0.7
@@ -43,6 +43,7 @@ keras-utils==1.0.13
 kiwisolver==1.4.4
 langcodes==3.3.0
 libclang==15.0.6.1
+lxml==4.9.3
 Markdown==3.4.1
 markdown-it-py==2.2.0
 MarkupSafe==2.1.2
@@ -77,6 +78,7 @@ pyOpenSSL==23.0.0
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-docx==0.8.11
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
@@ -98,6 +100,7 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.11.0
 tensorflow-estimator==2.11.0
+tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.2.0
 thinc==8.1.9
